# spotcli

./: .env.example  main.py  pyproject.toml
spotcli/: App.py  __init__.py
spotcli/http/: Listener.py  server.py
spotcli/services/: AuthService.py
