[tool.poetry]
name = "spotcli"
version = "0.1.0"
description = "Spotify Client for CLI"
authors = ["KingofTime <antonio_neto77@hotmail.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
